fix mobile layout; restore z-index; remove and .gitignore in-place scss compilation

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -35,6 +35,11 @@ $zindex: (
     z-index: map-get($zindex, $level);
 }*/
 
+$z-message: 9000;
+$z-header: 8000;
+$z-navigation: 7000;
+$z-main: 6000;
+
 
 /* ==========================================================================
    H5BP Helper classes
