--- a/app/styles/_maps.scss
+++ b/app/styles/_maps.scss
@@ -5,18 +5,18 @@
 
 .community-info{
   position: fixed;
-  top: 0;
+  z-index: $z-message;
+  bottom: 0;
 
   width: 100%;
   @media only screen and (min-width: 769px) {
-    width: 70%;
+    width: ($main-column-width + $gutter_width);
   }
 
   left: 0;
   background-color: $selection-color;
   color: #FFF;
   padding: 2px 10px;
-  z-index: 200;
 
   h2{
     margin-bottom: 13px;
